--- a/app/src/main/res/layout/activity_smart_player.xml
+++ b/app/src/main/res/layout/activity_smart_player.xml
@@ -39,6 +39,7 @@
         android:id="@+id/lower"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/upper"
         android:gravity="center">
 
         <ImageView
