--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:text="File List"
+    android:textSize="50dp"
+    android:textStyle="bold"
+    android:textAlignment="center"
+    android:layout_marginBottom="100dp"/>
     <ListView
         android:id="@+id/songNames"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"></ListView>
 
 </RelativeLayout>
