--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="File List"
+    android:text="Songs List"
     android:textSize="50dp"
     android:textStyle="bold"
     android:textAlignment="center"
