--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
     android:textSize="50dp"
     android:textStyle="bold"
     android:textAlignment="center"
+    android:textColor="@color/colorPrimary"
     android:layout_marginBottom="100dp"/>
     <ListView
         android:id="@+id/songNames"
